<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="10dp"
    >

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"

        >

        <TextView
            android:id="@+id/Hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/let_s_sign_you_in" />

        <TextView
            android:id="@+id/Welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back" />

        <TextView
            android:id="@+id/Miss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/you_ve_been_missed" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="200dp">

            <EditText
                android:id="@+id/emailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Sign_in_email"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Sign_in_pass"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/buttonSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sign_in_btn" />
        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>