<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#302D2D"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/MainLogo"
            android:layout_width="259dp"
            android:layout_height="302dp"
            app:srcCompat="@drawable/hookah"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/light_grey"
            android:layout_marginTop="40dp"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/login"
            android:textColor="@color/light_grey" />

    </LinearLayout>
    <LinearLayout
        android:layout_below="@id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">


        <Button

            android:id="@+id/buttonSignUp"
            android:layout_width="11dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/button_sign_up"
            android:background="@drawable/btn_ripple"
            android:textColor="@color/light_grey"
            />


        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="11dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/button_sign_in"
            android:background="@drawable/btn_ripple"
            android:textColor="@color/light_grey"
            android:width="40dp"


            />
    </LinearLayout>

</RelativeLayout>